# bookstore

./: IMPORTANTE_LEER.md  db.sqlite3  requirements.txt
accounts/migrations/: 0001_initial.py  0002_rename_personas_persona.py  0003_delete_persona.py
api/migrations/: 0001_initial.py
books/: schema.py
books/migrations/: 0001_initial.py
bookstore/: IMPORTANTE_LEER.md  db.sqlite3  pyproject.toml
bookstore/accounts/: models.py  views.py
bookstore/api/: models.py
bookstore/api/migrations/: 0001_initial.py
bookstore/books/: schema.py  urls.py
bookstore/books/migrations/: 0001_initial.py
bookstore/core/: schema.py  settings.py  urls.py
bookstore/homepage/: urls.py  views.py
drf/: settings.py  urls.py
