[tool.poetry]
name = "django_tutorial"
version = "0.1.0"
description = ""
authors = ["xenocida <victoravila1009@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
Django = "^4.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
